--- a/eskridge.bib
+++ b/eskridge.bib
@@ -8,6 +8,38 @@
 
 
 
+@Book{Samuel:1951:EP,
+  author =       "Viscount Herbert Louis Samuel and Albert Einstein",
+  title =        "Essay in physics",
+  publisher =    "Blackwell",
+  address =      "Oxford, UK",
+  pages =        "154",
+  year =         "1951",
+  LCCN =         "QC 6 SAM",
+  bibdate =      "Sat Sep 24 13:50:00 MDT 2011",
+  bibsource =    "http://www.math.utah.edu/pub/tex/bib/einstein.bib;
+                 innopac.wits.ac.za:210/INNOPAC",
+  acknowledgement = ack-nhfb,
+  remark =       "With a letter from Albert Einstein.",
+  subject =      "Physics; Philosophy",
+}
+
+@Book{Einstein:1952:CSM,
+  Author =       "Albert Einstein",
+  Title =        "Conceptions scientifiques, morales, et sociales.
+                 ({French}) [{Scientific}, moral, and social concepts]",
+  publisher =    "Flammarion",
+  address =      "Paris, France",
+  pages =        "316",
+  year =         "1952",
+  LCCN =         "QC16.E5 A314",
+  bibdate =      "Sat Oct 28 15:52:15 2006",
+  bibsource =    "http://www.math.utah.edu/pub/tex/bib/einstein.bib",
+  note =         "French translation of \cite{Einstein:1950:MLYb}.",
+  acknowledgement = ack-nhfb,
+  language =     "French",
+}
+
 @misc{bart2,
 	Author = {Eskridge, T. and Carvalho, M. and Benyo, B. and Atighetchi, M and Yaman, F. and Adler, A.},
 	Date-Added = {2018-05-14 12:59:03 +0000},
